# kc_modbus_mcp

./: .gitignore  DESIGN.md  Dockerfile  README.md  README_zh.md  pyproject.toml  simulator.py
.github/workflows/: ci.yml
docs/: DESIGN.md
